--- a/fitlifepro/src/app/component/about-us/about-us.component.css
+++ b/fitlifepro/src/app/component/about-us/about-us.component.css
@@ -1,524 +1,363 @@
-/*.about-us {*/
-/*  background-color: #242424;*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  overflow: hidden;*/
-/*  padding-bottom: 432px;*/
-/*}*/
-
-/*.navbar {*/
-/*  display: flex;*/
-/*  padding-top: 6px;*/
-/*  flex-direction: column;*/
-/*  color: #454545;*/
-/*  font: 400 32px Open Sans, sans-serif;*/
-/*}*/
-
-/*.navbar-content {*/
-/*  background-color: #fff;*/
-/*  display: flex;*/
-/*  width: 50%;*/
-/*  align-items: center;*/
-/*  justify-content: space-between;*/
-/*  padding: 0 26px;*/
-/*}*/
-
-/*.navbar-left {*/
-/*  display: flex;*/
-/*  margin-top: -6px;*/
-/*  align-items: center;*/
-/*  gap: 40px 100px;*/
-/*}*/
-
-/*.company-logo {*/
-/*  aspect-ratio: 0.99;*/
-/*  object-fit: contain;*/
-/*  object-position: center;*/
-/*  width: 149px;*/
-/*  align-self: stretch;*/
-/*  max-width: 100%;*/
-/*}*/
-
-/*.nav-link {*/
-/*  align-self: stretch;*/
-/*  margin: auto 0;*/
-/*  text-decoration: none;*/
-/*  color: inherit;*/
-/*}*/
-
-/*.nav-link-active {*/
-/*  color: #fed233;*/
-/*  font-weight: 600;*/
-/*}*/
-
-/*.navbar-center {*/
-/*  display: flex;*/
-/*  gap: 3px;*/
-/*  margin: auto 0;*/
-/*}*/
-
-/*.gift-plan-btn {*/
-/*  background: none;*/
-/*  border: none;*/
-/*  font: inherit;*/
-/*  cursor: pointer;*/
-/*  flex-grow: 1;*/
-/*}*/
-
-/*.gift-icon {*/
-/*  aspect-ratio: 1.04;*/
-/*  object-fit: contain;*/
-/*  object-position: center;*/
-/*  width: 49px;*/
-/*}*/
-
-/*.navbar-right {*/
-/*  display: flex;*/
-/*  gap: 29px;*/
-/*  font-size: 24px;*/
-/*  color: #fed233;*/
-/*  font-weight: 600;*/
-/*  margin: auto 0;*/
-/*}*/
-
-/*.auth-btn {*/
-/*  border-radius: 20px;*/
-/*  background-color: #454545;*/
-/*  color: #fed233;*/
-/*  border: none;*/
-/*  font: inherit;*/
-/*  cursor: pointer;*/
-/*  padding: 9px 27px;*/
-/*}*/
-
-/*@media (max-width: 991px) {*/
-/*  .navbar-content {*/
-/*    max-width: 100%;*/
-/*    padding: 0 20px;*/
-/*  }*/
-
-/*  .navbar-left {*/
-/*    max-width: 100%;*/
-/*  }*/
-
-/*  .auth-btn {*/
-/*    white-space: normal;*/
-/*    padding: 9px 20px;*/
-/*  }*/
-/*}*/
-
-
-
-
-
-
-
-/*.intro-section {*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  padding: 59px 50px;*/
-/*  width: 100%;*/
-/*}*/
-
-/*.intro-content {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  align-items: flex-start;*/
-/*  color: #fff;*/
-/*  font: 600 42px 'Open Sans', sans-serif;*/
-/*  max-width: 50%;*/
-/*}*/
-
-/*.intro-title {*/
-/*  font: italic 700 72px 'Roboto', sans-serif;*/
-/*  margin: 0;*/
-/*}*/
-
-/*.highlight {*/
-/*  color: #fed233;*/
-/*}*/
-
-/*.intro-description {*/
-/*  font-size: 42px;*/
-/*  margin: 16px 0;*/
-/*}*/
-
-/*.intro-details {*/
-/*  font-size: 32px;*/
-/*  font-weight: 400;*/
-/*  margin: 51px 0 90px;*/
-/*}*/
-
-/*.cta-button {*/
-/*  background-color: #fed233;*/
-/*  color: #fff;*/
-/*  padding: 15px 52px;*/
-/*  text-decoration: none;*/
-/*  font-size: 32px;*/
-/*}*/
-
-/*.intro-image {*/
-/*  width: 50%;*/
-/*  height: auto;*/
-/*  object-fit: contain;*/
-/*}*/
-
-/*.coach-section, .team-section, .clients-section, .join-section {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  align-items: center;*/
-/*  padding: 0 50px;*/
-/*  margin-top: 124px;*/
-/*  width: 100%;*/
-/*}*/
-
-/*.section-title {*/
-/*  color: #fed233;*/
-/*  font: italic 700 72px 'Roboto', sans-serif;*/
-/*  margin: 0;*/
-/*}*/
-
-/*.section-description {*/
-/*  color: #fff;*/
-/*  font: 600 42px 'Open Sans', sans-serif;*/
-/*  margin: 50px 0 80px;*/
-/*  text-align: center;*/
-/*}*/
-
-/*.coach-content {*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  width: 100%;*/
-/*}*/
-
-/*.coach-image-wrapper {*/
-/*  position: relative;*/
-/*  width: 43%;*/
-/*}*/
-
-/*.coach-image-background {*/
-/*  background-color: #fed233;*/
-/*  height: 248px;*/
-/*  width: 436px;*/
-/*}*/
-
-/*.coach-image {*/
-/*  position: absolute;*/
-/*  top: 88px;*/
-/*  left: 0;*/
-/*  width: 100%;*/
-/*  height: auto;*/
-/*  z-index: 10;*/
-/*}*/
-
-/*.coach-details {*/
-/*  width: 57%;*/
-/*}*/
-
-/*.coach-description {*/
-/*  color: #fff;*/
-/*  font: 400 32px 'Open Sans', sans-serif;*/
-/*  text-align: right;*/
-/*}*/
-
-/*.coach-achievements {*/
-/*  display: flex;*/
-/*  margin-top: 25px;*/
-/*}*/
-
-/*.achievement-background {*/
-/*  background-color: #fed233;*/
-/*  width: 460px;*/
-/*  height: 428px;*/
-/*  margin-right: 20px;*/
-/*}*/
-
-/*.achievement-content {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  justify-content: center;*/
-/*}*/
-
-/*.achievement-description {*/
-/*  color: #fff;*/
-/*  font: 400 32px 'Open Sans', sans-serif;*/
-/*  text-align: right;*/
-/*  margin: 0 0 25px;*/
-/*}*/
-
-/*.team-grid {*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  width: 100%;*/
-/*  max-width: 1647px;*/
-/*  margin-top: 101px;*/
-/*}*/
-
-/*.team-member {*/
-/*  width: 25%;*/
-/*  text-align: center;*/
-/*}*/
-
-/*.member-image {*/
-/*  width: 258px;*/
-/*  height: 258px;*/
-/*  border-radius: 50%;*/
-/*  object-fit: cover;*/
-/*}*/
-
-/*.member-name {*/
-/*  color: #fed233;*/
-/*  font: 400 32px 'Open Sans', sans-serif;*/
-/*  margin: 20px 0 11px;*/
-/*}*/
-
-/*.member-description {*/
-/*  color: #fff;*/
-/*  font: 300 24px 'Open Sans', sans-serif;*/
-/*}*/
-
-/*.client-testimonial {*/
-/*  background-color: #fed233;*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  padding: 61px 50px;*/
-/*  width: 100%;*/
-/*}*/
-
-/*.testimonial-content {*/
-/*  width: 43%;*/
-/*}*/
-
-/*.client-name {*/
-/*  color: #454545;*/
-/*  font: 600 42px 'Open Sans', sans-serif;*/
-/*  margin: 0 0 37px;*/
-/*}*/
-
-/*.testimonial-text {*/
-/*  color: #454545;*/
-/*  font: 400 32px 'Open Sans', sans-serif;*/
-/*}*/
-
-/*.before-after {*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  width: 57%;*/
-/*}*/
-
-/*.before-image, .after-image {*/
-/*  width: 48%;*/
-/*}*/
-
-/*.image-placeholder {*/
-/*  background-color: #fff;*/
-/*  height: 542px;*/
-/*  width: 100%;*/
-/*}*/
-
-/*.image-label {*/
-/*  color: #fff;*/
-/*  font: 600 42px 'Open Sans', sans-serif;*/
-/*  text-align: center;*/
-/*  margin: 18px 0 0;*/
-/*}*/
-
-/*.testimonial-navigation {*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  justify-content: flex-end;*/
-/*  margin: 25px 241px 0 0;*/
-/*}*/
-
-/*.nav-arrow {*/
-/*  width: 48px;*/
-/*  height: 48px;*/
-/*  cursor: pointer;*/
-/*}*/
-
-/*.nav-dots {*/
-/*  display: flex;*/
-/*  gap: 21px;*/
-/*  margin: 0 42px;*/
-/*}*/
-
-/*.dot {*/
-/*  background-color: #fff;*/
-/*  border-radius: 50%;*/
-/*  width: 18px;*/
-/*  height: 18px;*/
-/*}*/
-
-/*.dot.active {*/
-/*  background-color: #fed233;*/
-/*}*/
-
-/*.join-form {*/
-/*  background-color: #454545;*/
-/*  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.07);*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*  align-items: flex-start;*/
-/*  padding: 258px 80px;*/
-/*  width: 100%;*/
-/*  margin-top: 100px;*/
-/*}*/
-/*.name-input {*/
-/*  font-size: 32px;*/
-/*  font-weight: 400;*/
-/*  color: #454545;*/
-/*  border: none;*/
-/*  border-bottom: 1px solid #000;*/
-/*  background: transparent;*/
-/*  width: 100%;*/
-/*  padding: 10px 0;*/
-/*  margin-top: 132px;*/
-/*}*/
-
-/*.submit-button {*/
-/*  background-color: #fed233;*/
-/*  color: #454545;*/
-/*  font-size: 32px;*/
-/*  font-weight: 600;*/
-/*  padding: 8px 41px;*/
-/*  border: none;*/
-/*  cursor: pointer;*/
-/*  margin-top: 50px;*/
-/*}*/
-
-/*.visually-hidden {*/
-/*  position: absolute;*/
-/*  width: 1px;*/
-/*  height: 1px;*/
-/*  margin: -1px;*/
-/*  padding: 0;*/
-/*  overflow: hidden;*/
-/*  clip: rect(0, 0, 0, 0);*/
-/*  white-space: nowrap;*/
-/*  border: 0;*/
-/*}*/
-
-/*@media (max-width: 991px) {*/
-/*  .about-us {*/
-/*    padding-bottom: 100px;*/
-/*  }*/
-
-/*  .header {*/
-/*    padding: 18px 20px;*/
-/*  }*/
-
-/*  .nav-list {*/
-/*    gap: 20px;*/
-/*  }*/
-
-/*  .intro-section {*/
-/*    flex-direction: column;*/
-/*    padding: 40px 20px;*/
-/*  }*/
-
-/*  .intro-content {*/
-/*    max-width: 100%;*/
-/*  }*/
-
-/*  .intro-title {*/
-/*    font-size: 40px;*/
-/*  }*/
-
-/*  .intro-description {*/
-/*    font-size: 32px;*/
-/*  }*/
-
-/*  .intro-details {*/
-/*    margin: 40px 0;*/
-/*  }*/
-
-/*  .intro-image {*/
-/*    width: 100%;*/
-/*    margin-top: 40px;*/
-/*  }*/
-
-/*  .coach-section, .team-section, .clients-section, .join-section {*/
-/*    padding: 0 20px;*/
-/*    margin-top: 40px;*/
-/*  }*/
-
-/*  .section-title {*/
-/*    font-size: 40px;*/
-/*  }*/
-
-/*  .section-description {*/
-/*    font-size: 32px;*/
-/*    margin: 40px 0;*/
-/*  }*/
-
-/*  .coach-content {*/
-/*    flex-direction: column;*/
-/*  }*/
-
-/*  .coach-image-wrapper, .coach-details {*/
-/*    width: 100%;*/
-/*  }*/
-
-/*  .coach-image {*/
-/*    position: static;*/
-/*    margin-top: 40px;*/
-/*  }*/
-
-/*  .coach-description {*/
-/*    text-align: left;*/
-/*  }*/
-
-/*  .coach-achievements {*/
-/*    flex-direction: column;*/
-/*  }*/
-
-/*  .achievement-background {*/
-/*    width: 100%;*/
-/*    margin-right: 0;*/
-/*    margin-bottom: 20px;*/
-/*  }*/
-
-/*  .achievement-description {*/
-/*    text-align: left;*/
-/*  }*/
-
-/*  .team-grid {*/
-/*    flex-wrap: wrap;*/
-/*    justify-content: center;*/
-/*    gap: 40px;*/
-/*  }*/
-
-/*  .team-member {*/
-/*    width: 100%;*/
-/*    max-width: 300px;*/
-/*  }*/
-
-/*  .client-testimonial {*/
-/*    flex-direction: column;*/
-/*    padding: 40px 20px;*/
-/*  }*/
-
-/*  .testimonial-content, .before-after {*/
-/*    width: 100%;*/
-/*  }*/
-
-/*  .before-after {*/
-/*    margin-top: 40px;*/
-/*  }*/
-
-/*  .testimonial-navigation {*/
-/*    margin: 25px 10px 0 0;*/
-/*  }*/
-
-/*  .join-form {*/
-/*    padding: 100px 20px;*/
-/*  }*/
-
-/*  .name-input {*/
-/*    margin-top: 40px;*/
-/*  }*/
-
-/*  .submit-button {*/
-/*    margin-top: 40px;*/
-/*  }*/
-/*}*/
+:host { display: contents; }
+
+.about-us-page {
+  background-color: #242424;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.hero-section {
+  padding: 80px 0;
+}
+
+.content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.text-content {
+  flex: 1;
+  max-width: 50%;
+}
+
+.hero-title {
+  font: italic 700 72px 'Roboto', sans-serif;
+  margin-bottom: 16px;
+}
+
+.highlight {
+  color: #fed233;
+}
+
+.hero-subtitle {
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.hero-description {
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 32px;
+}
+
+.cta-button {
+  background-color: #454545;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 15px 32px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #333;
+}
+
+.hero-image {
+  max-width: 45%;
+  height: auto;
+}
+
+@media (max-width: 991px) {
+  .content-wrapper {
+    flex-direction: column;
+  }
+
+  .text-content {
+    max-width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .hero-image {
+    max-width: 100%;
+  }
+
+  .hero-title {
+    font-size: 48px;
+  }
+}
+
+.coach-section {
+  padding: 80px 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-title {
+  font: italic 700 72px 'Roboto', sans-serif;
+  color: #fff;
+  margin-bottom: 24px;
+}
+
+.highlight {
+  color: #fed233;
+}
+
+.section-description {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 0 auto 60px;
+}
+
+.coach-content {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+
+.coach-image-wrapper {
+  position: relative;
+  flex: 1;
+}
+
+.image-background {
+  background-color: #fed233;
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  z-index: 1;
+}
+
+.coach-image {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: auto;
+}
+
+.coach-text {
+  flex: 1;
+  text-align: left;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.coach-text p {
+  margin-bottom: 20px;
+}
+
+@media (max-width: 991px) {
+  .section-title {
+    font-size: 48px;
+  }
+
+  .coach-content {
+    flex-direction: column;
+  }
+
+  .coach-image-wrapper,
+  .coach-text {
+    width: 100%;
+  }
+}
+
+.team-section {
+  background-color: #fed233;
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.section-title {
+  font: italic 700 72px 'Roboto', sans-serif;
+  color: #242424;
+  margin-bottom: 24px;
+}
+
+.highlight {
+  color: #242424;
+}
+
+.section-description {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 0 auto 60px;
+  color: #242424;
+}
+
+.team-members {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.team-member {
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: calc(25% - 30px);
+  min-width: 250px;
+}
+
+.member-image {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  margin-top: -50px;
+}
+
+.member-info {
+  padding: 20px;
+}
+
+.member-name {
+  font-size: 24px;
+  color: #fed233;
+  margin-bottom: 10px;
+}
+
+.member-description {
+  font-size: 16px;
+  color: #454545;
+  line-height: 1.6;
+}
+
+@media (max-width: 991px) {
+  .section-title {
+    font-size: 48px;
+  }
+
+  .team-member {
+    width: calc(50% - 20px);
+  }
+}
+
+@media (max-width: 576px) {
+  .team-member {
+    width: 100%;
+  }
+}
+
+.client-section {
+  background-color: #fed233;
+  padding: 80px 20px;
+  text-align: center;
+}
+
+.section-title {
+  font: italic 700 72px 'Roboto', sans-serif;
+  color: #242424;
+  margin-bottom: 24px;
+}
+
+.highlight {
+  color: #242424;
+}
+
+.section-description {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 0 auto 60px;
+  color: #242424;
+}
+
+.client-content {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.client-testimonial {
+  flex: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 40px;
+  text-align: left;
+  border-radius: 10px;
+}
+
+.client-name {
+  font-size: 24px;
+  color: #242424;
+  margin-bottom: 20px;
+}
+
+.client-quote {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #454545;
+}
+
+.client-results {
+  flex: 1;
+  margin-left: 40px;
+}
+
+.result-images {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.image-container {
+  text-align: center;
+}
+
+.image-label {
+  font-size: 18px;
+  color: #242424;
+  margin-bottom: 10px;
+}
+
+.result-image {
+  width: 100%;
+  max-width: 250px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.result-indicators {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.indicator {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.indicator.active {
+  background-color: #242424;
+}
+
+@media (max-width: 991px) {
+  .section-title {
+    font-size: 48px;
+  }
+
+  .client-content {
+    flex-direction: column;
+  }
+
+  .client-results {
+    margin-left: 0;
+    margin-top: 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .result-images {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-container:not(:first-child) {
+    margin-top: 20px;
+  }
+}
