--- a/fitlifepro/src/app/component/dashboard/workoutdash/workout.component.css
+++ b/fitlifepro/src/app/component/dashboard/workoutdash/workout.component.css
@@ -3,15 +3,19 @@
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
+
 }
 
 h1 {
   color: #333;
   margin-bottom: 20px;
   text-align: center;
+
 }
 
 .content-wrapper {
+  background-color: #f5f5f5;
+
   display: flex;
   gap: 20px;
 }
@@ -32,9 +36,13 @@ form {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: #f5f5f5;
+
 }
 
 mat-form-field {
+  background-color: #f5f5f5;
+
   width: 100%;
 }
 
