--- a/fitlifepro/src/app/component/dashboard/over-view/over-view.component.css
+++ b/fitlifepro/src/app/component/dashboard/over-view/over-view.component.css
@@ -1,3 +1,9 @@
 body {
   font-family: Arial, sans-serif;
+
+
+}
+mat-card-content canvas {
+  width: 100% !important;
+  height: 300px !important;
 }
